[package]
name = "perro_resource_api"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_nodes = { path = "../../core/perro_nodes" }
perro_ids = { path = "../../core/perro_ids" }
perro_animation = { path = "../../core/perro_animation" }
perro_render_bridge = { path = "../../render_stack/perro_render_bridge" }
perro_scene = { path = "../../runtime_project/perro_scene" }
perro_structs = { path = "../../core/perro_structs" }
perro_pawdio = { path = "../../audio_stack/perro_pawdio" }
perro_variant = { path = "../../core/perro_variant" }
perro_csv = { path = "../../core/perro_csv" }
