[package]
name = "perro_resource_api"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
perro_nodes.workspace = true
perro_ids.workspace = true
perro_animation.workspace = true
perro_render_bridge.workspace = true
perro_scene.workspace = true
perro_structs.workspace = true
perro_pawdio.workspace = true
perro_variant.workspace = true
perro_csv.workspace = true
