[package]
name = "perro_web"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64.workspace = true
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["Document", "Event", "EventTarget", "History", "HtmlDocument", "Location", "PopStateEvent", "Storage", "Window"] }
