[package]
name = "perro_pawdio"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_asset_formats = { path = "../../core/perro_asset_formats" }
perro_io = { path = "../../io_stack/perro_io" }
perro_ids = { path = "../../core/perro_ids" }
rodio = { version = "0.17", default-features = true }

[dev-dependencies]
criterion = "0.5"

[features]
profile = []

[[bench]]
name = "play_source"
harness = false
