[package]
name = "perro_pawdio"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_asset_formats.workspace = true
perro_io.workspace = true
perro_ids.workspace = true
crossbeam-channel = "0.5"
cpal = "0.15"
midly = { version = "0.5.3", default-features = false, features = ["std"] }
rodio = { version = "0.17", default-features = true }
rustysynth = "1.3.6"

[dev-dependencies]
criterion = "0.5"

[features]
profile = []

[[bench]]
name = "play_source"
harness = false

[[bench]]
name = "midi"
harness = false
