[package]
name = "perro_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_assets.workspace = true
perro_ids.workspace = true
perro_input_api.workspace = true
perro_io.workspace = true
perro_project.workspace = true
perro_scene.workspace = true
perro_static_pipeline.workspace = true
toml.workspace = true
wasm-bindgen-cli-support = "=0.2.126"
