[package]
name = "perro_compiler"
version = "0.1.0"
description = "Build compiler for Perro game projects"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
perro_structs.workspace = true
perro_assets.workspace = true
perro_asset_formats.workspace = true
perro_ids.workspace = true
perro_input_api.workspace = true
perro_io.workspace = true
perro_project.workspace = true
perro_scene.workspace = true
perro_static_pipeline.workspace = true
toml.workspace = true
sha2 = "0.10"
wasm-bindgen-cli-support = "=0.2.126"
