[package]
name = "perro_static_pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_structs.workspace = true
perro_asset_formats.workspace = true
perro_io.workspace = true
perro_meshlets.workspace = true
perro_scene.workspace = true
perro_render_bridge.workspace = true
perro_animation.workspace = true
perro_project.workspace = true
perro_ids.workspace = true
perro_nodes.workspace = true
image = { version = "0.25.9", default-features = true }
gltf = { version = "1.4.1", features = ["import", "utils"] }
rayon = "1.10"
perro_particle_math.workspace = true
perro_runtime.workspace = true
perro_ui.workspace = true
perro_csv.workspace = true
csv = "1.4"
glam = "0.31.0"
