[package]
name = "perro_structs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = "0.31.0"
perro_ids.workspace = true
[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "math_hotpaths"
harness = false

[[bench]]
name = "bitmask_hotpaths"
harness = false
