[package]
name = "perro_cli"
version = "0.1.0"
description = "Command-line tools for Perro game projects"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
perro_compiler.workspace = true
perro_project.workspace = true
perro_scene.workspace = true
perro_animation.workspace = true
perro_structs.workspace = true
gltf.workspace = true
serde_json = "1"
ctrlc = "3.4"
