[package]
name = "perro_dev_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_app = { path = "../../render_stack/perro_app" }
perro_project = { path = "../../runtime_project/perro_project" }

[features]
profile = ["perro_app/profile"]
ui_profile = ["perro_app/ui_profile"]
mem_profile = ["perro_app/mem_profile"]
