[package]
name = "perro_io"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_assets = { path = "../perro_assets" }
perro_ids = { path = "../../core/perro_ids" }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "static_asset_load"
harness = false
