[package]
name = "perro_io"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
perro_assets.workspace = true
perro_ids.workspace = true
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
perro_web.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "static_asset_load"
harness = false

[[bench]]
name = "static_lookup_scale"
harness = false
